--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.production.local
+
 # OS-specific files
 .DS_Store
 Thumbs.db
